tests/sema/negative/access_field_on_non_struct.nv
fn main() : void {
    let x : int = 1;
    print_int(x.y);
    return;
}
